--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -20,6 +20,23 @@
     </modules>
     <!-- End:add by Wenlong Meng at 2016-01-10 11:57 for modules -->
 
+    <!-- Begin:add by Wenlong Meng at 2016-01-10 20:42 for properties -->
+    <properties>
+        <org.springframework.version>4.2.4.RELEASE</org.springframework.version>
+        <org.mybatis.version>3.2.6</org.mybatis.version>
+        <org.mybatis.mybatis-spring.version>1.2.3</org.mybatis.mybatis-spring.version>
+        <junit.version>4.12</junit.version>
+        <javax.servlet.version>3.1.0</javax.servlet.version>
+        <ch.qos.logback.version>1.1.1</ch.qos.logback.version>
+        <org.slf4j.version>1.7.5</org.slf4j.version>
+        <org.apache.commons.version>3.3.2</org.apache.commons.version>
+        <commons-lang.version>2.6</commons-lang.version>
+        <com.google.guava.version>18.0</com.google.guava.version>
+        <commons-configuration.versoin>1.9</commons-configuration.versoin>
+    </properties>
+    <!-- End:add by Wenlong Meng at 2016-01-10 20:42 for properties -->
+
+
     <dependencyManagement>
         <dependencies>
             <!-- Begin:add by Wenlong Meng at 2016-01-10 11:36 for dragon -->
@@ -50,25 +67,25 @@
                         <artifactId>commons-lang</artifactId>
                     </exclusion>
                 </exclusions>
-                <version>1.9</version>
+                <version>${commons-configuration.versoin}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
-                <version>18.0</version>
+                <version>${com.google.guava.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>3.3.2</version>
+                <version>${org.apache.commons.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>commons-lang</groupId>
                 <artifactId>commons-lang</artifactId>
-                <version>2.6</version>
+                <version>${commons-lang.version}</version>
             </dependency>
             <!-- End:add by Wenlong Meng at 2016-01-10 12:33 for commons -->
 
@@ -76,24 +93,24 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.7.5</version>
+                <version>${org.slf4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
-                <version>1.1.1</version>
+                <version>${ch.qos.logback.version}</version>
             </dependency>
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-core</artifactId>
-                <version>1.1.1</version>
+                <version>${ch.qos.logback.version}</version>
             </dependency>
             <!-- End:add by Wenlong Meng at 2016-01-10 12:33 for log -->
 
             <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>javax.servlet-api</artifactId>
-                <version>3.1.0</version>
+                <version>${javax.servlet.version}</version>
                 <scope>provided</scope>
             </dependency>
 
@@ -101,7 +118,8 @@
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.12</version>
+                <version>${junit.version}</version>
+                <scope>test</scope>
             </dependency>
             <!-- End:add by Wenlong Meng at 2016-01-10 13:26 for test -->
 
@@ -109,53 +127,53 @@
             <dependency>
                 <groupId>org.mybatis</groupId>
                 <artifactId>mybatis-spring</artifactId>
-                <version>1.2.3</version>
+                <version>${org.mybatis.mybatis-spring.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-jdbc</artifactId>
-                <version>4.2.4.RELEASE</version>
+                <version>${org.springframework.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
-                <version>4.2.4.RELEASE</version>
+                <version>${org.springframework.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context-support</artifactId>
-                <version>4.2.4.RELEASE</version>
+                <version>${org.springframework.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-beans</artifactId>
-                <version>4.2.4.RELEASE</version>
+                <version>${org.springframework.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-expression</artifactId>
-                <version>4.2.4.RELEASE</version>
+                <version>${org.springframework.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-instrument</artifactId>
-                <version>4.2.4.RELEASE</version>
+                <version>${org.springframework.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-tx</artifactId>
-                <version>4.2.4.RELEASE</version>
+                <version>${org.springframework.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-orm</artifactId>
-                <version>4.2.4.RELEASE</version>
+                <version>${org.springframework.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-webmvc</artifactId>
-                <version>4.2.4.RELEASE</version>
+                <version>${org.springframework.version}</version>
             </dependency>
 
             <!-- End:add by Wenlong Meng at 2016-01-10 13:24 for spring -->
@@ -164,12 +182,98 @@
             <dependency>
                 <groupId>org.mybatis</groupId>
                 <artifactId>mybatis</artifactId>
-                <version>3.2.6</version>
+                <version>${org.mybatis.version}</version>
             </dependency>
             <!-- End:add by Wenlong Meng at 2016-01-10 13:41 for mybatis -->
 
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources.${deploy.type}</directory>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+
+        <plugins>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+                <version>1.0</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.0</version>
+                <configuration>
+                    <reportPlugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-javadoc-plugin</artifactId>
+                            <version>2.8.1</version>
+                        </plugin>
+                    </reportPlugins>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>**/*.properties</exclude>
+                        <exclude>**/*.xml</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <encoding>${encoding}</encoding>
+                    <useDefaultDelimiters>false</useDefaultDelimiters>
+                    <escapeString>\</escapeString>
+                    <delimiters>
+                        <delimiter>${*}</delimiter>
+                    </delimiters>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+                <version>2.3.1</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19</version>
+                <configuration>
+                    <forkMode>once</forkMode>
+                    <argLine>-Dfile.encoding=UTF-8 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/dragon/ws/logs</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <!-- Begin:add by Wenlong Meng at 2016-01-10 12:01 for profiles -->
     <profiles>
