--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -36,6 +36,14 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+        </dependency>
         <!-- End:add by Wenlong Meng at 2016-01-10 13:35 for spring -->
 
         <!-- Begin:add by Wenlong Meng at 2016-01-10 13:35 for spring -->
@@ -46,31 +54,5 @@
         <!-- End:add by Wenlong Meng at 2016-01-10 13:35 for spring -->
 
     </dependencies>
-
-    <profiles>
-        <profile>
-            <id>dev</id>
-            <build>
-                <resources>
-                    <resource>
-                        <directory>${profiles.dir}/dev</directory>
-                    </resource>
-                </resources>
-            </build>
-        </profile>
-
-        <profile>
-            <id>prod</id>
-            <build>
-                <resources>
-                    <resource>
-                        <directory>${profiles.dir}/prod</directory>
-                    </resource>
-                </resources>
-            </build>
-        </profile>
-
-    </profiles>
-
 
 </project>
